Switched from Optional to vavr’s Option